--- a/cosumer_spending_analysis.ipynb
+++ b/cosumer_spending_analysis.ipynb
@@ -309,6 +309,76 @@
     "# Segment and analyze customers\n",
     "segment_customers(df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster Means:\n",
+      "         average_spend  transaction_count  cumulative_spent\n",
+      "cluster                                                    \n",
+      "0          1903.881715          56.697578      30023.161037\n",
+      "1          1502.366549          45.719228      19248.329696\n",
+      "2          6720.426001          49.788462     243750.796683\n",
+      "\n",
+      "Cluster Names Assigned:\n",
+      "    cluster      cluster_name\n",
+      "0         1        High Spend\n",
+      "3         0  Medium Low Spend\n",
+      "16        2               NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "def name_clusters(df):\n",
+    "    # Calculate the mean of features for each cluster\n",
+    "    cluster_means = df.groupby('cluster')[['average_spend', 'transaction_count', 'cumulative_spent']].mean()\n",
+    "\n",
+    "    # Print cluster means to understand the features of each cluster\n",
+    "    print(\"\\nCluster Means:\")\n",
+    "    print(cluster_means)\n",
+    "\n",
+    "    # Assigning names to clusters based on their characteristics\n",
+    "    cluster_names = []\n",
+    "    for idx, row in cluster_means.iterrows():\n",
+    "        # Low Spend\n",
+    "        if row['average_spend'] < 1000 and row['cumulative_spent'] < 10000:\n",
+    "            cluster_names.append(\"Low Spend\")\n",
+    "        \n",
+    "        # Medium Spend (subcategorized into two groups)\n",
+    "        elif 1000 <= row['average_spend'] < 2500 and row['cumulative_spent'] < 30000:\n",
+    "            cluster_names.append(\"Medium Low Spend\")  # Medium Low Spend\n",
+    "        \n",
+    "        elif 2500 <= row['average_spend'] < 3000 and row['cumulative_spent'] < 50000:\n",
+    "            cluster_names.append(\"Medium High Spend\")  # Medium High Spend\n",
+    "        \n",
+    "        # High Spend\n",
+    "        elif row['average_spend'] >= 3000 or row['cumulative_spent'] >= 50000:\n",
+    "            cluster_names.append(\"High Spend\")\n",
+    "\n",
+    "    # Map the cluster names to the df\n",
+    "    cluster_name_dict = {i: cluster_names[i] for i in range(len(cluster_names))}\n",
+    "    df['cluster_name'] = df['cluster'].map(cluster_name_dict)\n",
+    "\n",
+    "    print(\"\\nCluster Names Assigned:\")\n",
+    "    print(df[['cluster', 'cluster_name']].drop_duplicates())\n",
+    "\n",
+    "# Call the function to name clusters\n",
+    "name_clusters(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
