--- a/test.ipynb
+++ b/test.ipynb
@@ -618,6 +618,82 @@
     "# Run Market Basket Analysis\n",
     "market_basket_analysis(df)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **📌 Step 9: Results, Business Insights & Action Items**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **🧩 Key Insights:**\n",
+    "Three distinct customer clusters were identified using K-Means clustering based on spending behavior:\n",
+    "\n",
+    "Cluster 0: Low-average spenders\n",
+    "\n",
+    "Cluster 1: Medium-frequency, low spenders\n",
+    "\n",
+    "Cluster 2: High-value, high-spending customers (top-tier)\n",
+    "\n",
+    "Top spending categories include:\n",
+    "\n",
+    "[Fill in once you know — e.g., Electronics, Housing, or Friend Activities]\n",
+    "\n",
+    "Payment preferences showed a strong tilt toward:\n",
+    "\n",
+    "[e.g., Debit Card or Digital Wallets]\n",
+    "\n",
+    "Location-based analysis indicates higher spending occurs via [e.g., In-store or Mobile App channels].\n",
+    "\n",
+    "##### **🎯 Customer Segmentation Observations:**\n",
+    "\n",
+    "Majority of customers fall into Low to Medium spend brackets.\n",
+    "\n",
+    "A smaller segment contributes to disproportionately high revenue (Pareto principle insight: focus on the top 20%).\n",
+    "\n",
+    "##### **📊 RFM Analysis Takeaways:**\n",
+    "\n",
+    "Identified top RFM scorers (e.g., customers with frequent, recent, and high spending).\n",
+    "\n",
+    "These customers are prime targets for loyalty programs, exclusive promotions, or VIP perks.\n",
+    "\n",
+    "##### **✅ Actionable Recommendations:**\n",
+    "\n",
+    "1. Retarget High-Value Clusters (Cluster 2 & High RFM Scores):\n",
+    "\n",
+    "Personalized campaigns, early access offers, loyalty rewards.\n",
+    "\n",
+    "2. Nurture Mid-Tier Segments (Cluster 1):\n",
+    "\n",
+    "Offer incentives for increased frequency and cart value.\n",
+    "\n",
+    "3. Analyze Low Spenders (Cluster 0):\n",
+    "\n",
+    "Investigate friction points — are prices too high? Experience lacking? Offer onboarding or entry-level deals.\n",
+    "\n",
+    "4. Category-Level Promotions:\n",
+    "\n",
+    "- Promote top categories in seasonal campaigns.\n",
+    "\n",
+    "- Upsell frequently paired items in top categories.\n",
+    "\n",
+    "5. Optimize for Preferred Payment Methods:\n",
+    "\n",
+    "Enhance UX and security for most-used methods (e.g., streamline digital wallet experience).\n",
+    "\n",
+    "6. RFM-Based Segmentation Campaigns:\n",
+    "\n",
+    "Create tailored email marketing lists by RFM tier (e.g., high RFM gets VIP access, low RFM gets reactivation offers)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
